res/examples/invalid/call_fn_stmt_with_calls_as_args_but_type_mismatched.eg
fn sum (a: number, b: number): number => {
    a + b
}

fn empty_string (): string => { "" }

sum(empty_string(), empty_string());

// out: TypeError: mismatched types: expected type `number` but received `string`
// out: TypeError: mismatched types: expected type `number` but received `string`